@@ -3,6 +3,7 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
 A.F....... [ZBX-9455] fixed length limit for host prototype name (Gunars, Sasha)
 ..F....... [ZBX-10806] fixed whitespace between elements in host, host mass update, host prototype and proxy forms (Sasha)
 ..F....... [ZBXNEXT-3263] moved image type selection to top in administration->general->images (Cemeris)
@@ -2820,6 +2821,7 @@ Changes for 2.0.19rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
 
 --------------------------------------------------------------------------------
 Changes for 2.0.18
